[gd_scene load_steps=5 format=3 uid="uid://cbonn4i67ewpl"]

[ext_resource type="Script" uid="uid://cxmq8uk8np4m7" path="res://scripts/lobby_menu.gd" id="1_gk1co"]

[sub_resource type="Gradient" id="Gradient_rhts7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_06t4h"]
gradient = SubResource("Gradient_rhts7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhts7"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gk1co")
menu_name = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_06t4h")

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="Lobby" type="HBoxContainer" parent="TextureRect/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="HBoxContainer" type="VBoxContainer" parent="TextureRect/Panel/MarginContainer/Lobby"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 39
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/Panel/MarginContainer/Lobby/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "LOBBY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="TextureRect/Panel/MarginContainer/Lobby/HBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rhts7")
text = "Start Game"

[node name="DisconnectButton" type="Button" parent="TextureRect/Panel/MarginContainer/Lobby/HBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rhts7")
text = "Disconnect
"

[node name="PlayerInfo" type="VBoxContainer" parent="TextureRect/Panel/MarginContainer/Lobby"]
layout_mode = 2
alignment = 1

[node name="PlayersLabel" type="Label" parent="TextureRect/Panel/MarginContainer/Lobby/PlayerInfo"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Players"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="TextureRect/Panel/MarginContainer/Lobby/PlayerInfo"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlayerList" type="VBoxContainer" parent="TextureRect/Panel/MarginContainer/Lobby/PlayerInfo"]
layout_mode = 2
